# file_tree_check

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE.txt  Makefile  README.md  bids_raw.tree  config.ini  displayablePath.py  fileChecker.py  fileTreeHandler.py  main.py  pyproject.toml  requirements.txt  setup.py  smartDirectoryPath.py  smartFilePath.py  smartPath.py  statBuilder.py  trace
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: system_test.yml  test.yml
docs/: config.md  faq.md  glossary.md  index.md
docs/source/: conf.py  config.md  demo.md  examples.md  faq.md  file_tree.md  file_tree_check.rst  general_information.md  glossary.md  index.rst  modules.rst  usage.md  usage_notes.rst
file_tree_check/: __init__.py  _parser.py  _version.py  config.ini  config_default.ini  identifierEngine.py  main.py  smartDirectoryPath.py  smartFilePath.py  smartPath.py
file_tree_check/trees/: duck_demo.tree  duck_demo_sub.tree  duck_demo_withsub.tree  freesurfer.tree
results/: File_Structure.txt  log.txt
src/file_tree_check/: __init__.py  _parser.py  config.ini  fileChecker.py  identifierEngine.py  main.py  smartDirectoryPath.py  smartFilePath.py  smartPath.py  statBuilder.py
src/file_tree_check/trees/: bids_raw.tree  fMRIPrep.tree
tests/: test_fileChecker.py  test_identifierEngine.py  test_smartDirectoryPath.py  test_smartFilePath.py  test_smart_path.py
tests/test_data/dataset1/sub-01/dwi/: sub-01_dwi.bval  sub-01_dwi.bvec
tests/test_data/dataset1/sub-01/func/: sub-01_task-rest_bold.json
tests/test_data/dataset1/sub-02/dwi/: sub-02_dwi.bval  sub-02_dwi.bvec
tests/test_data/dataset1/sub-02/func/: sub-02_task-rest_bold.json
tests/test_data/dataset1/sub-03/: unexpected_file.txt
tests/test_data/dataset1/sub-03/dwi/: sub-03_dwi.bval  sub-03_dwi.bvec
tests/test_data/dataset1/sub-04/dwi/: sub-04_dwi.bvec
tests/test_data/derivatives1/: filetree.tree
