[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "file_tree_check"
description = "File checking script in a repeating folder organization e.g. BIDS."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE.txt" }
authors = [{ name = "Bertrand Toutée", email = "bertrand.toutee@gmail.com" }]
dynamic = ["version"]
dependencies = ["seaborn", "matplotlib", "file_tree"]

[project.optional-dependencies]
doc = [
  "sphinx",
  "sphinx-argparse",
  "sphinx-copybutton",
  "sphinx_rtd_theme",
  "myst-parser",
  "rstcheck",
]
test = ["pytest", "coverage[toml]"]
docs = ["file_tree_check[doc]"]
tests = ["file_tree_check[test]"]
dev = ["file_tree_check[doc,test]"]

[project.scripts]
file_tree_check = "file_tree_check.main:main"

[tool.hatch.build.targets.wheel]
packages = ["file_tree_check"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "file_tree_check/_version.py"

[tool.pytest.ini_options]
addopts = "-ra -vv"

[tool.coverage.run]
branch = true
source = ["file_tree_check/"]


[tool.codespell]
skip = "./.git,.mypy_cache,env,venv,tests,*bval,*bvec"

[tool.black]
line-length = 100
